# fiap-mle-tech-challenge

./: .env  .env.development  .env.sample  .gitignore  DockerFile.api  DockerFile.data_viz  Dockerfile  README.md  app.py  buildspec.yml  coleta_embrapa.ipynb  data.json  docker-compose.yaml  pyproject.toml  requirements-dv.txt  requirements.txt  vitivinicultura.py
2mlet_phase1/: app.py
api/: main.py  util.py
api/config/: auth.py  database.py  jwt.py
api/controllers/: auth_controller.py  dags_airflow_controller.py  vitibrasil_controller.py
api/interfaces/: ivitibrasil_repository.py
api/models/: vitbrasil.py
api/repositories/: auth_repository.py  vitibrasil_repository.py
api/routes/: user.py  viti_brasil.py
cicd/: README.md
cicd/cloudformation/: actions.json  build-infra.yaml  buildspec.yml.template  codebuild_trust_policy_doc.json  conditions-pattern.json  service-mlet.json  service-mlet.json.template  task-definition-template.json  task-definition.json
cicd/scripts/: env-vars.sh  token.sh
dags/: dag-extract-exportation-espumantes.py  dag-extract-importation-vinho-mesa.py  dag-teste-.py
data/bronze/: ProcessaAmericanas.csv  ProcessaMesa.csv  ProcessaSemclass.csv  ProcessaViniferas.csv  endpoints.pkl
data_viz/: app.py
data_viz/components/: sidebar.py
embrapa-db/: Dockerfile  Dockerfile.2  initialize.sh  targets.json  users.json
fiap-mle-tech-challenge/: app.py
modules/: database copy.py  database.py  export.py  file_utils.py  models.py  routes.py  schemas.py  scraping.py  security.py  user_exceptions.py
scrapping/: app.py  deprecated-app.py  utils.py
scrapping/airflow/dags/: dag-extract-commercialization.py  dag-extract-exportation-espumantes.py  dag-extract-exportation-suco-uva.py  dag-extract-exportation-uvas-frescas.py  dag-extract-exportation-vinhos-mesa.py  dag-extract-importation-espumantes.py  dag-extract-importation-suco-uva.py  dag-extract-importation-uvas-frescas.py  dag-extract-importation-uvas-passas.py  dag-extract-importation-vinho-mesa.py  dag-extract-process-americanas-e-hibridas.py  dag-extract-process-sem-classificacao.py  dag-extract-process-uvas-mesa.py  dag-extract-process-viniferas.py  dag-extract-process.py  dag-extract-production.py
scrapping/data/Production/: data.json
scrapping/scripts/: setup_airflow.sh
src/: dados.py  data_types.py  download_dados_csv.py  utils.py
static/: pages.json
tech_challenge/: app.py  common.py  download_dados_csv.py  main.py  schemas.py  utils.py
temp/dags/: dag-extract-commercialization.py  dag-extract-exportation-suco-uva.py  dag-extract-exportation-uvas-frescas.py  dag-extract-exportation-vinhos-mesa.py  dag-extract-importation-espumantes.py  dag-extract-importation-suco-uva.py  dag-extract-importation-uvas-passas.py  dag-extract-production.py  utils.py
