[tool.poetry]
name = "fiap-mle-tech-challenge"
version = "0.1.0"
description = ""
authors = ["Thales Gomes <thalexbr@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.111.0"
requests = "2.32.3"
bs4 = "0.0.2"
pyjwt = "2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "0.0.9"
pandas = "2.2.2"
pymongo = "4.7.3"
ipykernel = "6.29.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
taskipy = "1.12.2"
ruff = "0.4.8"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fiap-mle-tech-challenge/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fiap-mle-tech-challenge -vv'
post_test = 'coverage html'
