[tool.poetry]
name = "clg-env"
version = "0.1.0"
description = ""
authors = ["felipe_bizzo <fbizzo@magnasistemas.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.6"

[tool.ruff]
line-length = 93

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
test = 'pytest -s -x --cov=tech_clg -vv'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev tech_clg/app.py --host 127.0.0.1'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
